<resources>
    <string name="app_name">DukaShare</string>
    <string name="title_activity_detail_host">ActivityDetailHostActivity</string>
    <string name="title_activity_list">Activities</string>
    <string name="title_activity_detail">Activity Detail</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="seeRegistered">See Registered</string>
    <string name="settings">Settings</string>
    <string name="status">Status</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="registered_to">You are registered to</string>
    <string name="activity_count">%1$d Activities</string>
    <string name="registered_slash_places">%1$d/%2$d</string>
    <string name="activity_time">%1$s %2$s %3$s</string>
    <string name="Cleaning">Takarítás</string>
    <string name="activity_date">%1$s %2$d. %3$s</string>
    <string name="activity_detail_date">%1$d. %2$s %3$s %4$s %5$s</string>
    <string name="responsible">%1$s %2$s</string>
    <string name="available_places">%1$d available places</string>
    <string name="no_available_places">No available places</string>
    <string name="full">Full</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_activity">Add Activity</string>
    <string name="administration">Administration</string>
    <string name="activity_summary">Activity summary</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="autofill_date_hint">2021.11.31</string>
    <string name="autofill_time_hint">18:30</string>
    <string name="end_time">End time</string>
    <string name="activity_is18">Is U18?</string>
    <string name="deadline_time">DeadLine Time</string>
    <string name="deadline_date">Deadline Date</string>
    <string name="Zero">0</string>
    <string name="required_participants">Required Participants</string>
    <string name="activity_type">Activity Type</string>
    <string name="responsible_user">Responsible</string>
    <string name="new_activity">Create Activity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hours">%1$s hours</string>
</resources>