<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DukaShare"
    android:background="@color/primaryColor">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/secondaryLightColor"
        android:textSize="30sp"
        android:text="@string/user_name"
        android:gravity="center"
        android:paddingTop="45dp"
        android:fontFamily="sans-serif-medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        android:background="@drawable/rectangle_back"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/sign_out"
            />
        <View
            android:id="@+id/tvLine1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"
            app:layout_constraintTop_toBottomOf="@id/tvActivityDate"
            />

        <TextView
            android:id="@+id/tvAdministration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/administration"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>