<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rectangle_light_blue"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"
        android:textColor="@color/secondaryLightColor"
        android:textSize="50sp"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"/>

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:flow_horizontalAlign="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/passwordField"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:background="@drawable/button_background_grey"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/emailField"
            app:layout_constraintBottom_toBottomOf="parent"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_grey"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnLogin"
        android:backgroundTint="@color/lightGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/login"
        android:theme="@style/PrimaryButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutLogin"/>
</androidx.constraintlayout.widget.ConstraintLayout>