<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="8dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/tvActivity"
        card_view:cardBackgroundColor="@color/secondaryLightColor"
        card_view:cardCornerRadius="12dp"
        card_view:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="vertical"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lightGrey"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:padding="6dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    tools:text="@string/activity_date" />

                <LinearLayout
                    android:id="@+id/activity_detail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="8"
                    android:padding="8dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/rectangle_back">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="8"
                        android:baselineAligned="false"
                        android:orientation="vertical"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        android:layout_gravity="center_vertical"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tvSummary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:text="@string/Cleaning" />

                        <TextView
                            android:id="@+id/tvTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="@color/lightGrey"
                            tools:text="@string/activity_time" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvRegistered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintStart_toEndOf="@id/tvTime"
                        card_view:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/registered_slash_places" />

                </LinearLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>